Excel and Database test cases

--- a/final-framework-testng/test-output/old/Default suite/methods.html
+++ b/final-framework-testng/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97b678">  <td>19/07/06 15:43:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_035.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC_035@53b32d7]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>19/07/06 15:43:53</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_035.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_035@53b32d7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>19/07/06 15:44:01</td>   <td>7940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_035.validLoginTest()[pri:0, instance:com.training.sanity.tests.RTTC_035@53b32d7]">validLoginTest</td> 
-  <td>main@2025864991</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>19/07/06 15:44:14</td>   <td>20881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_035.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_035@53b32d7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/12 14:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_065.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/12 14:57:59</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_065.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/12 14:58:09</td>   <td>10439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_065.validLoginTest()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">validLoginTest</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/12 14:58:28</td>   <td>28786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_065.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/12 14:58:29</td>   <td>29787</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_065.verifyproduct()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">&lt;&lt;verifyproduct</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
 </table>
