--- a/final-framework-testng/test-output/index.html
+++ b/final-framework-testng/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\ABDULRAUFFMOHAMMED\AppData\Local\Temp\testng-eclipse--1169210733\testng-customsuite.xml</span>
+                    <span>C:\Users\ABDULRAUFFMOHAMMED\AppData\Local\Temp\testng-eclipse-926310857\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_065" hash-for-method="validLoginTest">validLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_061" hash-for-method="Register(ahmed, mohammed, moha@gmail.com, 9876565600, KPHB colony, kukatpally, Hyderabad, 500039, India, Tela...)">Register(ahmed, mohammed, moha@gmail.com, 9876565600, KPHB colony, kukatpally, Hyderabad, 500039, India, Tela...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.sanity.tests.RTTC_061" hash-for-method="Register(abdul, Syed, abdsye@gmail.com, 9876565678, APHB colony, gachibowli, Hyderabad, 500033, India, Telang...)">Register(abdul, Syed, abdsye@gmail.com, 9876565678, APHB colony, gachibowli, Hyderabad, 500033, India, Telang...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +125,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.sanity.tests.RTTC_065</span>
+              <span class="class-name">com.training.sanity.tests.RTTC_061</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validLoginTest">
-                  </a> <!-- validLoginTest -->
-                  <span class="method-name">validLoginTest</span>
+                  <a name="Register(ahmed, mohammed, moha@gmail.com, 9876565600, KPHB colony, kukatpally, Hyderabad, 500039, India, Tela...)">
+                  </a> <!-- Register(ahmed, mohammed, moha@gmail.com, 9876565600, KPHB colony, kukatpally, Hyderabad, 500039, India, Tela...) -->
+                  <span class="method-name">Register</span>
+                  <span class="parameters">(ahmed, mohammed, moha@gmail.com, 9876565600, KPHB colony, kukatpally, Hyderabad, 500039, India, Telangana, abdul2, abdul2)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Register(abdul, Syed, abdsye@gmail.com, 9876565678, APHB colony, gachibowli, Hyderabad, 500033, India, Telang...)">
+                  </a> <!-- Register(abdul, Syed, abdsye@gmail.com, 9876565678, APHB colony, gachibowli, Hyderabad, 500033, India, Telang...) -->
+                  <span class="method-name">Register</span>
+                  <span class="parameters">(abdul, Syed, abdsye@gmail.com, 9876565678, APHB colony, gachibowli, Hyderabad, 500033, India, Telangana, abdul1, abdul1)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ABDULRAUFFMOHAMMED\AppData\Local\Temp\testng-eclipse--1169210733\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ABDULRAUFFMOHAMMED\AppData\Local\Temp\testng-eclipse-926310857\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +158,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.sanity.tests.RTTC_065&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.RTTC_061&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validLoginTest')
-data.setCell(0, 2, 'com.training.sanity.tests.RTTC_065')
-data.setCell(0, 3, 18337);
+data.setCell(0, 1, 'Register')
+data.setCell(0, 2, 'com.training.sanity.tests.RTTC_061')
+data.setCell(0, 3, 14463);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Register')
+data.setCell(1, 2, 'com.training.sanity.tests.RTTC_061')
+data.setCell(1, 3, 12631);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,27 +237,35 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.sanity.tests.RTTC_065</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.training.sanity.tests.RTTC_061</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpBeforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">49 ms</span>
+                <span class="method-start">301 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">validLoginTest</span>
-                <span class="method-start">10453 ms</span>
+                <span class="method-name">Register(abdul, Syed, abdsye@gmail.com, 9876565678, APHB colony, gachibowli, Hyderabad, 500033, India, Telang...)</span>
+                <span class="method-start">11405 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">28799 ms</span>
+                <span class="method-start">24040 ms</span>
               </div> <!-- configuration-method after -->
-              <div class="configuration-class after">
-                <span class="method-name">verifyproduct</span>
-                <span class="method-start">29801 ms</span>
-              </div> <!-- configuration-class after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">25893 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">Register(ahmed, mohammed, moha@gmail.com, 9876565600, KPHB colony, kukatpally, Hyderabad, 500039, India, Tela...)</span>
+                <span class="method-start">36661 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">51128 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
