--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97b678">  <td>19/07/12 14:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_065.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>19/07/12 14:57:59</td>   <td>-35</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_065.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>19/07/12 14:58:28</td>   <td>28751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_065.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>19/07/12 14:58:09</td>   <td>10404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_065.validLoginTest()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">validLoginTest</td> 
+<tr bgcolor="97b678">  <td>19/07/16 12:51:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_061.Register(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RTTC_061@5442a311]">Register</td> 
   <td>main@1589683045</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>19/07/12 14:58:29</td>   <td>29752</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_065.verifyproduct()[pri:0, instance:com.training.sanity.tests.RTTC_065@5442a311]">&lt;&lt;verifyproduct</td> 
+<tr bgcolor="97b678">  <td>19/07/16 12:51:40</td>   <td>25256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTTC_061.Register(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.training.sanity.tests.RTTC_061@5442a311]">Register</td> 
+  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/16 12:51:04</td>   <td>-11104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_061.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_061@5442a311]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/16 12:51:29</td>   <td>14488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_061.setUp()[pri:0, instance:com.training.sanity.tests.RTTC_061@5442a311]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/16 12:51:03</td>   <td>-11405</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RTTC_061.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RTTC_061@5442a311]">&gt;&gt;setUpBeforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/16 12:51:28</td>   <td>12635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_061.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_061@5442a311]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
+<tr bgcolor="97b678">  <td>19/07/16 12:51:55</td>   <td>39723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RTTC_061.tearDown()[pri:0, instance:com.training.sanity.tests.RTTC_061@5442a311]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1589683045</td>   <td></td> </tr>
 </table>
